# rotorDyn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/matplotlib-cpp-master/: Makefile  matplotlibcpp.h
lib/matplotlib-cpp-master/contrib/: CMakeLists.txt
lib/matplotlib-cpp-master/examples/: bar.cpp  colorbar.cpp  fill.cpp  imshow.cpp  lines3d.cpp  quiver.cpp  subplot.cpp  subplot2grid.cpp  update.cpp  xkcd.cpp
src/: Blade.cpp  Blade.h  BladeElement.cpp  BladeElement.h  Rotor.cpp  Rotor.h  main.cpp
